--- a/domain.yml
+++ b/domain.yml
@@ -72,6 +72,7 @@ responses:
   utter_property:
   - text: ' Property tax is the amount that is paid by the landowner to the municipal corporation or the local government for his/her area. The tax must be paid every year. For property tax payment go to : https://www.rmcegov.gov.in/payonline/propertytax.php'
   - text: 'ghhjjjj'
+  - text: 'yjjj'
 actions:
 - utter_greet
 - utter_happy
