--- a/domain.yml
+++ b/domain.yml
@@ -70,7 +70,8 @@ responses:
   utter_services:
   - text: 'We offer the following services: Property Tax, Water Charge, Profession Tax, RTI, Community Hall Booking, Shop and Establishment, Sports Registration, Rajkot Rajpath Ltd.(Bus Service), E-memo, VehicleTax, 24*7 Call Center'
   utter_property:
-  - text: ' Property tax is the amount that is paid by the landowner to the municipal corporation or the local government for his/her area. The tax must be paid every year. For property tax payment go to : https://www.rmcegov.gov.in/payonline/propertytax.php'
+  - text: ' Property tax is the amount that is paid by the landowner to the municipal corporation or the local government for his/her area. The tax must be paid every year. 1.For property tax payment,go to:https://www.rmcegov.gov.in/payonline/propertytax.php 2.To view property payment:-http://rmc.gov.in/rmcwebsite/tax_new.aspx
+           3.To view property tax bills/receipt: http://rmc.gov.in/rmcwebsite/tax_bill_receipt_new.aspx'
 
 
 actions:
