--- a/domain.yml
+++ b/domain.yml
@@ -77,7 +77,17 @@ responses:
            3.To view water charge bills/receipt:http://rmc.gov.in/rmcwebsite/water_tax_bill_receipt.aspx'
   utter_profession:
     - text: 'Professional tax can be defined as a tax that is levied by a state government on all individuals who earn a living through any medium.This is a type of tax that needs to be paid by each and every individual earning income. \n 1.To make profession tax payment(EC):-https://www.rmcegov.gov.in/payonline/proftax.php \n 2.To make profession tax payment(RC):-http://rmc.gov.in/rmcwebsite/frm_profession_tax_rc_payment.aspx
-             \n 3.To view profession tax payment history:-http://rmc.gov.in/rmcwebsite/professional_tax_history.aspx
+             \n 3.To view profession tax payment history:-http://rmc.gov.in/rmcwebsite/professional_tax_history.aspx'
+  utter_rti:
+    -text:  'RTI stands for Right To Information Act.It means that any Indian citizen can request any information (which is supposed to be public knowledge) from the offices and departments of the state or central governments. \n 1.To view RTI Application status:-http://rmc.gov.in/rmcwebsite/rti_status.aspx \n 2.For RTI Proactive disclosure:-http://rmc.gov.in/rmcwebsite/rti.aspx'
+  utter_booking:
+    - text: 'Due to the spread of Covid-19,please take required preventive measures.\n To book your desired community hall,kindly go to:-http://rmc.gov.in/rmcwebsite/hall_booking.aspx'
+  utter_sports:
+    - text: 'Here are the links to required documents for Shop and Establishment.Kindly visit the websites as per your need. \n
+            Form A: http://www.rmc.gov.in/rmcwebsite/docs/shop_esta/Form-A.pdf \n
+            Form D: http://www.rmc.gov.in/rmcwebsite/docs/shop_esta/Form-D.pdf \n
+            Instruction: http://www.rmc.gov.in/rmcwebsite/docs/shop_esta/instruction.pdf \n
+            New Shop Registration: http://www.rmc.gov.in/rmcwebsite/frm_shop_registration.aspx'
 actions:
 - utter_greet
 - utter_happy
