fix YAML error added and edited domain in domain.yml added example for call_center in nlu.yml added latest trained model in model\ directory

--- a/data/nlu.yml
+++ b/data/nlu.yml
@@ -126,6 +126,7 @@ nlu:
     - how to file complain
     - i want to file complain
     - complain
+    - call center
 
 - intent: goodbye
   examples: |
